--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div id="overlay">
     <ul>
-        <li class="title">选择音乐（本技术由不考川大不改名提供）</li>
+        <li class="title">选择音乐</li>
         <li>
             <button class="btn" id="btnA" type="button">
                 西蒙·潘鲁克降下雪花
@@ -93,7 +93,7 @@
         <li><button class="btn" id="btnC" type="button">在旅馆里没有TRG班克斯的房间
 </button></li>
         <li><button class="btn" id="btnD" type="button">叮当钟摆，马克·施密比</button></li>
-        <li class="separator">或者</li>
+        <li class="separator">本技术由不考川大不改名提供</li>
         <li>
             <input type="file" id="upload" hidden />
             <label for="upload">上传自己喜欢的一首歌</label>
